deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-hw-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mvkoshenkova-kuber-hw
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mvkoshenkova-kuber-hw
    spec:
      containers:
        - name: kuber-hw
          image: >-
            docker.io/mvkoshenkova/kuberhw:v6
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
