service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-hw-service
spec:
  selector:
    app: mvkoshenkova-kuber-hw
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
      nodePort: 32101
  type: LoadBalancer
